Fixed social bar alignment issue

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -158,7 +158,7 @@ nav {
 
 nav #social li{
     float: left;
-    margin-left: 12px;
+    margin-left: 5px;
 }
 
 nav #social button{
